--- a/1 - Programación en R/Quick1.3 - Josu Abad.ipynb
+++ b/1 - Programación en R/Quick1.3 - Josu Abad.ipynb
@@ -28,7 +28,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d77a6b90",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Código de la funcion para la progresion aritmetica\n",
@@ -41,7 +45,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4605530f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Comprobación del código <- los primeros 5 numeros impares\n",
@@ -80,7 +88,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1edcf021",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Definir la funcion que hace la media aritmetica de 4 numeros\n",
@@ -93,7 +105,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a3b3b691",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "media(8, 9, 7, 9)"
@@ -127,7 +143,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6b3a538b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "nacimiento  <-  2004\n",
@@ -141,7 +161,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "344818d2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "edad()"
@@ -167,7 +191,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6474503c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Funcion que decide si entras a una discoteca\n",
@@ -180,7 +208,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2867e288",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "entradas <- ifelse(test = (edades < 18), yes = FALSE, no = TRUE)\n",
@@ -199,7 +231,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7bbcab3f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Función para saber si un número es par\n",
@@ -215,7 +251,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec5dac7e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "par_impar(3)"
@@ -225,7 +265,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "25580835",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "par_impar(4)"
@@ -251,7 +295,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "84a9f788",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Suseión de los números 5 primeros numeros pares\n",
@@ -274,7 +322,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e1910d95",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Contar cuantos números son iguales a 0 en una secuencia de numeros\n",
@@ -287,7 +339,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0b1c7db4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "num_ceros <- 0 # Contador de todos los 0's del vector anterior\n",
@@ -300,7 +356,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bc249a21",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "num_ceros"
@@ -326,7 +386,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "52ce545d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Con while, vamos a simular el sistema de puntuación de tenis\n",
@@ -351,7 +415,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "92379372",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Simular la duración de un partido de fútbol\n",
@@ -377,7 +445,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "951ccec8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Imprimir los 10 primeros números impares\n",
@@ -396,7 +468,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db619514",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Simulación de lo que podría ser un software de un cajero en el supermercado\n",
@@ -415,7 +491,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d7413d07",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   }
